kube/app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-app-prj-saas-comercecloud-core-backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-saas-comercecloud-core-backend-deployment
  namespace: ns-app-prj-saas-comercecloud-core-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-prj-saas-comercecloud-core-backend
  template:
    metadata:
      labels:
        app: app-prj-saas-comercecloud-core-backend
    spec:
      containers:
        - name: app-saas-comercecloud-core-backend-container
          image: ghcr.io/blrvio/prj-saas-comercecloud-core-backend:development
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app-saas-comercecloud-core-backend-service
  namespace: ns-app-prj-saas-comercecloud-core-backend
spec:
  selector:
    app: app-prj-saas-comercecloud-core-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-saas-comercecloud-core-backend-ingress
  namespace: ns-app-prj-saas-comercecloud-core-backend
spec:
  rules:
  - host: api-dev.internal.blrv.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-saas-comercecloud-core-backend-service
            port:
              number: 80
